Fix GUI issues; Zoom view; Cut offs
- Resolves #41 - Fixed cut off height of application to ensure that
  continue doesn't get cut off when hovered.

- Resolves #38 - Created a `BlendedImage` component which given a
  styledImage:Image, baseImage:Image, and opacity, will show the
  `blended` image.

- Refactored ImageModal to use blended image component.

- Refactored Stylize and Finish to use new ImageModal.

--- a/gui/app/components/App.scss
+++ b/gui/app/components/App.scss
@@ -1,4 +1,5 @@
 .app {
+    height: 100%;
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
