--- a/gui/app/components/stylepreview/stylepreview.scss
+++ b/gui/app/components/stylepreview/stylepreview.scss
@@ -20,31 +20,18 @@
   z-index: 4;
 }
 
-.image--no-style {
-  background-size: cover;
-  position: absolute;
-  margin-bottom: 57px;
-  width: 415px;
-  height: 377px;
-}
-
-.image--style {
-  background-size: cover;
-  position: absolute;
-  width: 415px;
-  height: 377px;
-  z-index: 2;
-}
-
-.zoom-controls {
+.controls {
   position: absolute;
   height: 92px;
-  width: 415px;
-  top: 0;
-  bottom: 30;
+  width: inherit;
   left: 28;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.00) 15%, #000000 100%);
   z-index: 3;
+}
+
+.zoom-controls {
+  top: 0;
+  bottom: 30;
 }
 
 .zoom-icon {
@@ -62,15 +49,10 @@
   transform: scale(1.5, 1.5);
 }
 
-.slider {
-  position: absolute;
-  height: 92px;
-  width: 415px;
-  bottom: 0;
+.slider-controls {
   top: 30;
-  left: 28;
+  bottom: 0;
   background: linear-gradient(-179deg, rgba(0, 0, 0, 0.00) 15%, #000000 100%);
-  z-index: 3;
 }
 
 .fade-in {
